--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 tests/debug_dataset/bridge_dataset/1.0.0/dataset_statistics_*.json
+octo-small-1.5/
 *.whl
 # Byte-compiled / optimized / DLL files
 __pycache__/
