--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 tests/debug_dataset/bridge_dataset/1.0.0/dataset_statistics_*.json
 octo-small-1.5/
+octo-base-1.5/
 *.whl
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -163,7 +164,6 @@ cython_debug/
 
 .ipynb_checkpoints/
 wandb
-*.png
 *.sif
 .vscode
 .idea
