--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 tests/debug_dataset/bridge_dataset/1.0.0/dataset_statistics_*.json
 octo-small-1.5/
 octo-base-1.5/
+*.pkl
 *.whl
 # Byte-compiled / optimized / DLL files
 __pycache__/
