--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ imageio >= 2.31.1
 moviepy >= 1.0.3
 pre-commit == 3.3.3
 transformers >= 4.34.1
-tensorflow_hub == 0.15.0
+tensorflow_hub ~= 0.16.1
 tensorflow_text ~= 2.16.1
 tensorflow_datasets == 4.9.6
 tensorflow_graphics == 2020.5.20
@@ -26,3 +26,4 @@ tensorflow_graphics == 2020.5.20
 plotly >= 5.16.1
 matplotlib
 tf_keras ~= 2.16.0
+apache_beam == 2.59.0
